--- a/index.html
+++ b/index.html
@@ -71,9 +71,77 @@
     .btn:hover {
       background: #45a049;
     }
+
+    /* Modal styles */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.4);
+      overflow: auto;
+      padding-top: 60px;
+    }
+
+    .modal-content {
+      background-color: #fff;
+      margin: 5% auto;
+      padding: 30px;
+      border: 1px solid #888;
+      width: 80%;
+      max-width: 400px;
+      text-align: center;
+      border-radius: 15px; /* More rounded corners */
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    /* Cleaner Footer Text */
+    .footer {
+      margin-top: 20px;
+      font-size: 14px;
+      color: #aaa;
+    }
+
+    .footer a {
+      color: #007BFF;
+      text-decoration: none;
+    }
+
+    .footer a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
+  <!-- Modal for website visit prompt -->
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>Thanks for visiting Our Payment Page</h2>
+      <p>Discover amazing products at our official store!</p>
+      <a href="https://www.punshi.store" target="_blank">
+        <button class="btn">Visit Website</button>
+      </a>
+    </div>
+  </div>
+
   <div class="container">
     <h1>Generate UPI QR Code</h1>
     <div class="form-group">
@@ -85,34 +153,49 @@
       <div id="qrCode" class="qr-code"></div>
       <p id="qrMessage" style="display: none;">Scan to Pay</p>
     </div>
-    <button id="payWithUPIButton" class="btn" style="display: none;">Pay with UPI</button>
+    <button id="payWithUPIButton" class="btn" style="display: none;">Pay Now</button>
+    <div class="footer">
+      <p>Made by <b>Punshi Official Store</b></p>
+    </div>
   </div>
 
   <!-- Include qrcode.js library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <script>
-    const upiID = "nandokh068@oksbi";
+    const upiID = "punshibai@fam"; // UPI ID
     let lastRequestTime = 0;
-    let retryCount = 0;
+
+    // Modal control
+    const modal = document.getElementById("myModal");
+    const closeModal = document.getElementsByClassName("close")[0];
+
+    // Show modal when page is loaded
+    window.onload = () => {
+      modal.style.display = "block";
+    };
+
+    // Close modal when user clicks on <span> (x)
+    closeModal.onclick = function() {
+      modal.style.display = "none";
+    }
+
+    // Close modal if the user clicks outside of the modal
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
 
     function generateQR() {
-      const currentTime = Date.now();
-      const cooldown = 60000; // 1 minute cooldown
       const amount = document.getElementById("amount").value;
       const qrCodeDiv = document.getElementById("qrCode");
       const qrMessage = document.getElementById("qrMessage");
       const payWithUPIButton = document.getElementById("payWithUPIButton");
 
-      // Check cooldown
-      if (currentTime - lastRequestTime < cooldown) {
-        alert("Please wait a minute before generating another QR code.");
-        return;
-      }
-
       // Clear previous QR Code
       qrCodeDiv.innerHTML = "";
 
-      if (!amount || amount <= 0) {
+      if (!amount || amount <= 1) {
         alert("Please enter a valid amount.");
         return;
       }
@@ -128,9 +211,6 @@
           height: 200,
         });
 
-        // Update request time
-        lastRequestTime = Date.now();
-
         // Show QR Code and message
         qrMessage.style.display = "block";
 
@@ -141,19 +221,24 @@
         };
       } catch (error) {
         console.error("QR Code generation failed:", error);
-
-        // Retry logic
-        if (retryCount < 3) {
-          retryCount++;
-          setTimeout(generateQR, cooldown);
-        } else {
-          alert("Failed to generate QR code. Please try again later.");
-        }
+        alert("Failed to generate QR code. Please try again later.");
       }
     }
 
     // Attach event listener to "Generate QR Code" button
     document.getElementById("generateQRButton").addEventListener("click", generateQR);
+
+    // Automatically update QR code when user changes the amount
+    document.getElementById("amount").addEventListener("input", function() {
+      const qrCodeDiv = document.getElementById("qrCode");
+      const qrMessage = document.getElementById("qrMessage");
+      const payWithUPIButton = document.getElementById("payWithUPIButton");
+
+      // Clear previous QR code
+      qrCodeDiv.innerHTML = "";
+      qrMessage.style.display = "none"; // Hide QR code message
+      payWithUPIButton.style.display = "none"; // Hide Pay Now button
+    });
   </script>
 </body>
 </html>
