--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       }
 
       // Generate UPI URL
-      const upiURL = `upi://pay?pa=${upiID}&pn=YourBusinessName&am=${amount}&cu=INR`;
+      const upiURL = `upi://pay?pa=${upiID}&pn=PunshiOfficialStore&am=${amount}&cu=INR`;
 
       try {
         // Generate QR Code
