--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dynamic UPI QR Code Generator</title>
+  <title>UPI Payment & UTR Verification</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -72,47 +72,27 @@
       background: #45a049;
     }
 
-    /* Modal styles */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.4);
-      overflow: auto;
-      padding-top: 60px;
-    }
-
-    .modal-content {
-      background-color: #fff;
-      margin: 5% auto;
-      padding: 30px;
-      border: 1px solid #888;
-      width: 80%;
-      max-width: 400px;
-      text-align: center;
-      border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .close {
-      color: #aaa;
-      float: right;
-      font-size: 28px;
+    .message {
       font-weight: bold;
+      margin-top: 10px;
+      opacity: 0;
+      transform: translateY(-20px);
+      transition: opacity 0.4s ease, transform 0.4s ease;
     }
 
-    .close:hover,
-    .close:focus {
-      color: black;
-      text-decoration: none;
-      cursor: pointer;
+    .success-message {
+      color: green;
     }
 
-    /* Footer styles */
+    .error-message {
+      color: red;
+    }
+
+    .message.show {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
     .footer {
       margin-top: 20px;
       font-size: 14px;
@@ -127,23 +107,22 @@
     .footer a:hover {
       text-decoration: underline;
     }
+
+    #utr {
+      width: calc(100% - 20px);
+      padding: 10px;
+      margin: 10px 0;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      font-size: 16px;
+    }
   </style>
 </head>
 <body>
-  <!-- Modal for website visit prompt -->
-  <div id="myModal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>Thanks for visiting Our Payment Page</h2>
-      <p>Discover amazing products at our official store!</p>
-      <a href="https://www.punshi.store" target="_blank">
-        <button class="btn">Visit Website</button>
-      </a>
-    </div>
-  </div>
-
   <div class="container">
-    <h1>Generate UPI QR Code</h1>
+    <h1>UPI Payment</h1>
+
+    <!-- Generate QR Code Section -->
     <div class="form-group">
       <label for="amount">Enter Amount (₹):</label>
       <input type="number" id="amount" placeholder="Enter amount" min="1">
@@ -153,7 +132,17 @@
       <div id="qrCode" class="qr-code"></div>
       <p id="qrMessage" style="display: none;">Scan to Pay</p>
     </div>
-    <button id="payWithUPIButton" class="btn" style="display: none;">Pay Now</button>
+    <button id="payNowButton" class="btn" style="display: none;">Pay Now</button>
+
+    <!-- Transaction ID Verification Section -->
+    <div class="form-group">
+      <label for="utr">Enter UTR/Transaction ID:</label>
+      <input type="text" id="utr" placeholder="Enter numeric transaction ID">
+    </div>
+    <button id="verifyTransactionButton" class="btn">Verify Transaction ID</button>
+    <div id="message" class="message"></div>
+
+    <!-- Footer -->
     <div class="footer">
       <p>Made by <b>Punshi Official Store</b></p>
     </div>
@@ -162,36 +151,17 @@
   <!-- Include qrcode.js library -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <script>
-    const upiID = "punshibai@fam"; // Updated UPI ID
-
-    // Modal functionality
-    const modal = document.getElementById("myModal");
-    const closeModal = document.getElementsByClassName("close")[0];
-
-    window.onload = () => {
-      modal.style.display = "block"; // Show modal on page load
-    };
-
-    closeModal.onclick = function() {
-      modal.style.display = "none"; // Close modal when 'x' is clicked
-    };
-
-    window.onclick = function(event) {
-      if (event.target === modal) {
-        modal.style.display = "none"; // Close modal if clicked outside
-      }
-    };
+    const upiID = "punshibai@fam"; // Fixed UPI ID
 
     function generateQR() {
       const amount = document.getElementById("amount").value;
       const qrCodeDiv = document.getElementById("qrCode");
       const qrMessage = document.getElementById("qrMessage");
-      const payWithUPIButton = document.getElementById("payWithUPIButton");
+      const payNowButton = document.getElementById("payNowButton");
 
-      // Clear previous QR Code
-      qrCodeDiv.innerHTML = "";
+      qrCodeDiv.innerHTML = ""; // Clear previous QR Code
 
-      if (!amount || amount <= 1) {
+      if (!amount || amount <= 0) {
         alert("Please enter a valid amount.");
         return;
       }
@@ -208,8 +178,10 @@
         });
 
         qrMessage.style.display = "block";
-        payWithUPIButton.style.display = "block";
-        payWithUPIButton.onclick = () => {
+        payNowButton.style.display = "block";
+
+        // Update Pay Now button to redirect to UPI link
+        payNowButton.onclick = () => {
           window.location.href = upiURL;
         };
       } catch (error) {
@@ -218,17 +190,51 @@
       }
     }
 
+    function verifyUTR() {
+      const utrInput = document.getElementById("utr").value.trim();
+      const amountInput = document.getElementById("amount").value;
+      const messageDiv = document.getElementById("message");
+
+      messageDiv.classList.remove("show"); // Reset message animation
+
+      // Regex for numeric UTR ID format
+      const utrPattern = /^[0-9]+$/;
+
+      if (!utrInput) {
+        messageDiv.textContent = "Please enter a transaction ID.";
+        messageDiv.classList.add("show");
+        messageDiv.classList.add("error-message");
+        return;
+      }
+
+      if (!utrPattern.test(utrInput)) {
+        messageDiv.textContent = "Invalid transaction ID format. Please enter a numeric ID.";
+        messageDiv.classList.add("show");
+        messageDiv.classList.add("error-message");
+        return;
+      }
+
+      // Mock backend validation
+      const validUTRs = {
+        "500351457181": 250,
+        "9876543210": 500,
+        "2025010011": 100,
+      };
+
+      if (validUTRs[utrInput] && validUTRs[utrInput] == amountInput) {
+        messageDiv.textContent = "Payment Successful! Your transaction is verified.";
+        messageDiv.classList.add("show");
+        messageDiv.classList.add("success-message");
+      } else {
+        messageDiv.textContent = "Invalid transaction ID or mismatched amount. Please try again.";
+        messageDiv.classList.add("show");
+        messageDiv.classList.add("error-message");
+      }
+    }
+
+    // Event Listeners
     document.getElementById("generateQRButton").addEventListener("click", generateQR);
-
-    document.getElementById("amount").addEventListener("input", function () {
-      const qrCodeDiv = document.getElementById("qrCode");
-      const qrMessage = document.getElementById("qrMessage");
-      const payWithUPIButton = document.getElementById("payWithUPIButton");
-
-      qrCodeDiv.innerHTML = "";
-      qrMessage.style.display = "none";
-      payWithUPIButton.style.display = "none";
-    });
+    document.getElementById("verifyTransactionButton").addEventListener("click", verifyUTR);
   </script>
 </body>
 </html>
